Fixing engine name for LoremIpsum

--- a/Meiosis.Engine/Meiosis.Engine.csproj
+++ b/Meiosis.Engine/Meiosis.Engine.csproj
@@ -46,7 +46,7 @@
     <Compile Include="ImageGalleryItem.cs" />
     <Compile Include="interfaces\IMeiosisEngine.cs" />
     <Compile Include="engines\ImageGalleryEngine.cs" />
-    <Compile Include="LoremIpsumProvider.cs" />
+    <Compile Include="engines\LoremIpsumEngine.cs" />
     <Compile Include="LoremIpsumText.cs" />
     <Compile Include="LoremIpsumTextDictionary.cs" />
     <Compile Include="LoremPixelProvider.cs" />
