--- a/Meiosis.Services/Meiosis.Services.csproj
+++ b/Meiosis.Services/Meiosis.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{354BFF13-8753-4FDA-813C-F3C46C6A9130}</ProjectGuid>
+    <ProjectGuid>{FB9C483E-92C6-46DC-88C1-40A0364AD7A2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Meiosis.Engine</RootNamespace>
-    <AssemblyName>Meiosis.Engine</AssemblyName>
+    <RootNamespace>Meiosis.Services</RootNamespace>
+    <AssemblyName>Meiosis.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,6 +34,18 @@
       <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Nancy.Owin, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nancy.Owin.1.4.1\lib\net40\Nancy.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,25 +56,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoremIpsumTextProvider.cs" />
-    <Compile Include="models\DataContainer.cs" />
-    <Compile Include="models\DataElement.cs" />
-    <Compile Include="elements\ImageGallery.cs" />
-    <Compile Include="elements\ImageItem.cs" />
-    <Compile Include="interfaces\IMeiosisEngine.cs" />
-    <Compile Include="engines\ImageEngine.cs" />
-    <Compile Include="engines\LoremIpsumEngine.cs" />
-    <Compile Include="models\LoremIpsumText.cs" />
-    <Compile Include="interfaces\ILoremIpsumTextDictionary.cs" />
-    <Compile Include="LoremPixelProvider.cs" />
-    <Compile Include="models\Person.cs" />
-    <Compile Include="PersonEngine.cs" />
-    <Compile Include="PersonNamesProvider.cs" />
+    <Compile Include="DefaultServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="providers\RandomImageProvider.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Meiosis.Engine\Meiosis.Engine.csproj">
+      <Project>{354bff13-8753-4fda-813c-f3c46c6a9130}</Project>
+      <Name>Meiosis.Engine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
